<resources>
    <string name="app_name">Meme Creator</string>

    <string name="two_image">Two Images</string>
    <string name="one_image">One Image</string>

    <string name="layout_selected_text">Layout Selected</string>

    <string name="two_image_top_text_button_text">Top Text</string>
    <string name="two_image_bottom_text_button_text"> Bottom Text</string>
    <string name="two_image_two_text_button_text"> Two Text</string>

    <string name="one_image_top_text_button_text"> Top Text</string>
    <string name="one_image_bottom_text_button_text"> Bottom Text</string>
    <string name="one_image_two_text_button_text">Two Text</string>

    <string name="back_button_text">Back</string>
    <string name="generate_button_text">Generate</string>
    <string name="background_button_text">Background Image</string>
    <string name="foreground_button_text">Foreground Image</string>
    <string name="text_button_text">Text</string>
    <string name="second_button_text">Second Text</string>
    <string name="color_button_text">Color</string>
    <string name="save_image_text">Save Image</string>


</resources>
