<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneImageBottom">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back_button_text" />

            <Button
                android:id="@+id/generate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/generate_button_text" />

        </LinearLayout>

        <Button
            android:id="@+id/background_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_button_text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_text" />

            <Button
                android:id="@+id/color_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_button_text" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>