<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/two_image"
        android:gravity="center|bottom"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        />

    <HorizontalScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/teal"
            >

            <Button
                android:layout_margin="10dp"
                android:gravity="center|bottom"
                android:id="@+id/two_image_top_text_button"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@color/gray"
                android:text="@string/two_image_top_text_button_text"
                android:textColor="@color/black" />

            <Button
                android:layout_margin="10dp"
                android:gravity="bottom|center"
                android:id="@+id/two_image_bottom_text_button"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:elevation="0dp"
                android:background="@color/gray"
                android:text="@string/two_image_bottom_text_button_text"
                android:textColor="@color/black" />

            <Button
                android:layout_margin="10dp"
                android:gravity="bottom|center"
                android:id="@+id/two_image_two_text_button"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@color/gray"
                android:text="@string/two_image_two_text_button_text"
                android:textColor="@color/black" />
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/one_image"
        android:textColor="#FFFFFF"
        android:gravity="center|bottom"
        android:textSize="25dp"/>

    <HorizontalScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/teal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_margin="10dp"
                android:gravity="bottom|center"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@color/gray"
                android:id="@+id/one_image_top_text_button"
                android:text="@string/one_image_top_text_button_text"
                android:textColor="@color/black"
                />

            <Button
                android:layout_margin="10dp"
                android:gravity="center|bottom"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@color/gray"
                android:id="@+id/one_image_bottom_text_button"
                android:text="@string/one_image_bottom_text_button_text"
                android:textColor="@color/black"
                />

            <Button
                android:layout_margin="10dp"
                android:gravity="bottom|center"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:background="@color/gray"
                android:id="@+id/one_image_two_text_button"
                android:text="@string/one_image_two_text_button_text"
                android:textColor="@color/black"/>

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>