<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoImage">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="55dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Bottom Text"/>

            <EditText
                android:id="@+id/second_text_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_button_text" />

        </LinearLayout>

        <Button
            android:id="@+id/color_button"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:text="text color"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="145dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/background_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/background_button_text" />

        <Button
            android:id="@+id/foreground_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foreground_button_text" />

        <LinearLayout
            android:gravity="center|bottom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="vertical">

            <Button
                android:layout_gravity="center|bottom"
                android:id="@+id/generate_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/generate"
                android:text="@string/generate_button_text" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>