<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneImage">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="55dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/text_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_text" />

            <EditText
                android:id="@+id/second_text_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_button_text" />

        </LinearLayout>

        <Button
            android:id="@+id/color_button"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:text="text color"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="145dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <Button
            android:id="@+id/background_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search Image" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/generate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/generate_button_text" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>